kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: ${CONTAINER_IMAGE_TAGGED}
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  type: NodePort
  selector:
    app: ${APPLICATION_NAME}
  ports:
    - port: 80
      nodePort: ${K8S_SERVICE_PORT}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME}
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: 行先掲示板
    gethomepage.dev/icon: https://gitlab.jtektrnd.net/uploads/-/system/project/avatar/231/whereabouts_v4.png
    gethomepage.dev/group: 業務アプリ
    gethomepage.dev/pod-selector: app=${APPLICATION_NAME}

spec:
  rules:
    - host: whereabouts.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APPLICATION_NAME}
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APPLICATION_NAME}
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - whereabouts.jtektrnd.net
  rules:
    - backendRefs:
        - name: ${APPLICATION_NAME}
          port: 80
